[package]
name = "laminar"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
futures = "0.3.32"
serde = {version ="1.0.228",features = ["derive"]}
serde_json = "1.0.150"
serde_yaml = {version = "0.9.34"}
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["full","net"]}
tracing = "0.1.44"
tracing-subscriber = {version="0.3.23", features = ["json"]}
uuid = {version="1.23.2",features=["v4"]}



